--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Cmdu76.GitHub.io</title>
+    <title>Cmdu76's Blog</title>
   </head>
 
   <body>
@@ -18,29 +18,33 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Cmdu76">View on GitHub</a>
 
-          <h1 id="project_title">Cmdu76.GitHub.io</h1>
-          <h2 id="project_tagline">GitHub</h2>
-
+		  <h1 id="project_title">Cmdu76's blog</h1>
+          <h2 id="project_tagline"><a href="https://github.com/Cmdu76/cmdu76.github.io">Repository</h2>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-cmdu76s-github-page" class="anchor" href="#welcome-to-cmdu76s-github-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Cmdu76's GitHub Page.</h3>
+        
+<h3><a id="welcome-to-cmdu76s-github-page" class="anchor" href="#welcome-to-cmdu76s-github-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Cmdu76's GitHub Page.</h3>
 
-<p>This page is only there to list my GitHub project pages.</p>
+<p>Here is the list of articles that I wrote : </p>
+<ul>
+<li><a href="">Article 1</a></li>
+</ul>
 
+<h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h3>
+
+<p>Here is the list of documentation for project that I have : (some might be not up to date)</p>
 <ul>
 <li><a href="Keengine">Keengine</a></li>
 <li><a href="LTBL2">LTBL2</a></li>
 </ul>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p><a href="mailto:charles.mailly@free.fr">charles.mailly@free.fr</a> if you want to contact me or by GitHub</p>
+<p><a href="mailto:charles.mailly@free.fr">charles.mailly@free.fr</a> if you want to contact me or on GitHub</p>
       </section>
     </div>
 
@@ -50,8 +54,6 @@
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    
 
   </body>
 </html>
